[gd_scene load_steps=26 format=2]

[ext_resource path="res://source/utils/day_night_utils/day_night_modulate.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/audio/hop.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/sprites/cars/firetrucks/firetruck3_shadow.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/cars/firetrucks/firetruck3.png" type="Texture" id=4]
[ext_resource path="res://source/scenes/actors/car_templates/car_firetruck.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/light.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/fume2.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/star_05.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/cars/firetrucks/firetruck3_ladder.png" type="Texture" id=9]
[ext_resource path="res://assets/audio/pibi.mp3" type="AudioStream" id=10]
[ext_resource path="res://source/scenes/Siren.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/audio/bus_doors.mp3" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/ioio.mp3" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 71.775, 20 )

[sub_resource type="Gradient" id=26]
offsets = PoolRealArray( 0, 0.148387, 0.522581 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.535484, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=23]
gradient = SubResource( 26 )

[sub_resource type="Curve" id=27]
_data = [ Vector2( 0.00561798, 0.0761364 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.730682 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=25]
curve = SubResource( 27 )

[sub_resource type="ParticlesMaterial" id=28]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 25 )
color = Color( 0.780392, 0.780392, 0.780392, 1 )
color_ramp = SubResource( 23 )

[sub_resource type="CanvasItemMaterial" id=29]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=30]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=31]
blend_mode = 1

[sub_resource type="Animation" id=32]
length = 0.001

[sub_resource type="Animation" id=33]
resource_name = "jump"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("firetruck3/AnimationPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.1 ),
"transitions": PoolRealArray( 0.267943, 1.56917, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.012 ), Vector2( 0, -100 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("firetruck3/AnimationPivot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 1, 1.1, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1.2 ), Vector2( 1, 1 ), Vector2( 1.05, 0.95 ), Vector2( 1.05, 0.95 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("firetruck3/ShadowPivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 1, 1.1, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1.2 ), Vector2( 1.5, 1.5 ), Vector2( 1.05, 0.95 ), Vector2( 1.05, 0.95 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("firetruck3/ShadowPivot:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=34]
resource_name = "move"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("firetruck3/AnimationPivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1, 1.3, 1.5, 1.8, 2, 2.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("firetruck3/Brum")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 15 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("firetruck3/ShadowPivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1, 1.3, 1.5, 1.8, 2, 2.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="firetruck3" type="Node2D"]
script = ExtResource( 5 )
speed = 180.0
can_change_color = false
max_ladder_angle_deg = 60.0
min_ladder_angle_deg = 20.0

[node name="ShadowPivot" type="Node2D" parent="."]

[node name="LadderPivot" type="Node2D" parent="ShadowPivot"]
position = Vector2( 194, 52 )
rotation = -0.523599
scale = Vector2( 1, -0.5 )

[node name="Firetruck1Ladder" type="Sprite" parent="ShadowPivot/LadderPivot"]
self_modulate = Color( 0, 0, 0, 0.0941176 )
position = Vector2( -99.6122, -2.53331 )
texture = ExtResource( 9 )
offset = Vector2( -9, 0 )

[node name="Firetruck2Shadow" type="Sprite" parent="ShadowPivot"]
self_modulate = Color( 1, 1, 1, 0.0941176 )
position = Vector2( 1, 32 )
texture = ExtResource( 3 )

[node name="AnimationPivot" type="Node2D" parent="."]
position = Vector2( 0, 0.012 )

[node name="Sprites" type="Node2D" parent="AnimationPivot"]
position = Vector2( 0, -23.281 )

[node name="CarFill" type="Sprite" parent="AnimationPivot/Sprites"]
visible = false
position = Vector2( 32, -62.731 )
scale = Vector2( 0.5, 0.5 )

[node name="LadderPivot" type="Node2D" parent="AnimationPivot/Sprites"]
position = Vector2( 199, -86.731 )
rotation = 0.523599

[node name="Firetruck1Ladder" type="Sprite" parent="AnimationPivot/Sprites/LadderPivot"]
position = Vector2( -99.6122, -2.53331 )
texture = ExtResource( 9 )
offset = Vector2( -9, 0 )

[node name="CatDiscovery" type="Area2D" parent="AnimationPivot/Sprites/LadderPivot" groups=["passengerDiscover"]]
collision_layer = 64
collision_mask = 0
monitoring = false

[node name="CatCollision" type="CollisionShape2D" parent="AnimationPivot/Sprites/LadderPivot/CatDiscovery"]
position = Vector2( -174.904, -2.94225 )
shape = SubResource( 35 )
disabled = true

[node name="Siren" parent="AnimationPivot/Sprites" instance=ExtResource( 11 )]
position = Vector2( -157, -97.731 )
scale = Vector2( 0.568182, 0.575 )
color_start = Color( 0.690196, 0.686275, 0.654902, 1 )
color_end = Color( 0.211765, 0.360784, 0.568627, 1 )

[node name="Firetruck1" type="Sprite" parent="AnimationPivot/Sprites"]
position = Vector2( 0, -52 )
texture = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="AnimationPivot"]
light_mask = 0
position = Vector2( 181, -22.012 )
amount = 6
lifetime = 1.2
local_coords = false
process_material = SubResource( 28 )
texture = ExtResource( 7 )

[node name="BackLight" type="Sprite" parent="AnimationPivot"]
self_modulate = Color( 1, 0, 0, 1 )
light_mask = 0
material = SubResource( 29 )
position = Vector2( 186, -41.012 )
rotation = -1.5708
scale = Vector2( 0.175271, 0.208771 )
texture = ExtResource( 8 )

[node name="DayNightModulate" parent="AnimationPivot/BackLight" instance=ExtResource( 1 )]
night_color = Color( 1.5, 1.5, 1.5, 1 )

[node name="FrontLight" type="Sprite" parent="AnimationPivot"]
self_modulate = Color( 0.65, 0.617825, 0.4355, 1 )
material = SubResource( 30 )
position = Vector2( -169, -26.012 )
rotation = 3.14158
scale = Vector2( 0.138467, 0.138466 )
texture = ExtResource( 8 )

[node name="FrontLightRays" type="Sprite" parent="AnimationPivot/FrontLight"]
material = SubResource( 31 )
position = Vector2( -259.99, -7.22459 )
rotation = -1.57078
scale = Vector2( 18.0549, 21.5679 )
texture = ExtResource( 6 )
offset = Vector2( 0, 123 )

[node name="Brum" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
max_distance = 1000.0
bus = "Sfx"

[node name="JumpSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Sfx"

[node name="LadderSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -4.0
bus = "Sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/RESET = SubResource( 32 )
anims/jump = SubResource( 33 )
anims/move = SubResource( 34 )

[node name="Sfx" type="Node2D" parent="."]

[node name="Honk" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 10 )
bus = "Sfx"
